# forgewire-fabric

./: .gitignore  .mirrorignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README-runtime.md  README.md  SECURITY.md  VERSIONING.md  policy.yaml  policy.yaml.example  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release-vsix.yml
_audit/: README.md  alignment-report.md  inventory.md
config/: cluster.yaml  cluster.yaml.example
crates/fabric-audit/: Cargo.toml
crates/fabric-audit/src/: lib.rs
crates/fabric-audit/tests/: golden_fixtures.rs
crates/fabric-beacon/: Cargo.toml
crates/fabric-beacon/src/: lib.rs  presence.rs
crates/fabric-beacon/tests/: golden_fixture.rs
crates/fabric-claim-router/: Cargo.toml
crates/fabric-claim-router/src/: lib.rs
crates/fabric-cli/: Cargo.toml
crates/fabric-cli/src/: main.rs
crates/fabric-client/: Cargo.toml
crates/fabric-client/src/: lib.rs
crates/fabric-hub/: Cargo.toml
crates/fabric-hub/src/: auth.rs  cluster_manager.rs  lib.rs  main.rs  state.rs  utils.rs
crates/fabric-hub/src/routes/: admin.rs  agents.rs  approvals.rs  audit.rs  cluster.rs  cost.rs  dispatchers.rs  health.rs  labels.rs  mod.rs  runners.rs  secrets.rs  streams.rs  tasks.rs
crates/fabric-identity/: Cargo.toml
crates/fabric-identity/src/: lib.rs
crates/fabric-policy/: Cargo.toml
crates/fabric-policy/src/: lib.rs
crates/fabric-protocol/: Cargo.toml
crates/fabric-protocol/src/: lib.rs
crates/fabric-py/: Cargo.toml  pyproject.toml
crates/fabric-py/src/: lib.rs
crates/fabric-runner/: Cargo.toml
crates/fabric-runner/src/: directory.rs  lib.rs  main.rs
crates/fabric-runner/tests/: directory_e2e.rs
crates/fabric-store/: Cargo.toml
crates/fabric-store-rqlite/: Cargo.toml
crates/fabric-store-rqlite/src/: dates.rs  lib.rs  mcp_manifest.rs
crates/fabric-store-sqlite/: Cargo.toml
crates/fabric-store-sqlite/src/: lib.rs  schema.sql
crates/fabric-store/src/: lib.rs
crates/fabric-streams/: Cargo.toml
crates/fabric-streams/src/: lib.rs
crates/fabric-types/: Cargo.toml
crates/fabric-types/src/: lib.rs
crates/loom-runner/: Cargo.toml
crates/loom-runner/src/: lib.rs  main.rs
docs/: EXTRACTION.md  POSITIONING.md  QUICKSTART.md  RELEASE_DISTRIBUTION.md  protocol-v3-spec.md  release-checklist.md
docs/operations/: chaos-drills.md  dr-rqlite-backups.md  service-install.md  state-endpoints-parity.md  tls.md
docs/spec/phase-2.9/: THREATMODEL.md
install/mcp-configs/: README.md  SKILLS-AS-PROMPTS.md
install/mcp-configs/claude/: forgewire-fabric-runner.json  forgewire-fabric.json  forgewire-loom.json
install/mcp-configs/vscode/: mcp.json  mcp.runner.json
python/forgewire_fabric/: __init__.py  cli.py  install.py  parity_variance.py  runtime_validation.py
python/forgewire_fabric/_installer_assets/: grant-service-control.ps1  install-runner-watchdog.ps1  nssm-install-hub.ps1  nssm-install-runner.ps1
python/forgewire_fabric/cli/: __init__.py  _helpers.py  approvals.py  audit.py  cost.py  dispatch.py  hub.py  identity.py  runner.py  runners_cmd.py  secrets_cmd.py  setup.py  vscode.py
python/forgewire_fabric/cluster/: __init__.py  _inmemory.py  blob_index.py  blobs.py  blobs_chunked.py  cas.py  channels.py  protocol.py  transport.py
python/forgewire_fabric/hub/: __init__.py  (+20 more)
scripts/: _redeploy_hub_remote.ps1  bench_claim_router.py  bench_crypto.py  bench_streams.py  check_wowlan.ps1  install_vsix_remote.ps1  interactive_approval_harness.py  live_smoke_approvals.py  live_smoke_audit.py  live_smoke_capabilities.py  live_smoke_secrets.py  resubmit_approved.py  run_agent_runner.ps1  scan_tx_reads.py  smoke_test.py  start_hub.ps1  start_session.ps1  stop_hub.ps1  stop_session.ps1  wake_runner.ps1
scripts/dev/: convert_async_handlers.py  live_smoke.py  live_smoke_fanout.py  probe_capability_routing.py  sync_installer_assets.ps1
scripts/dr/: _cluster_config.ps1  backup_rqlite.ps1  chaos_drills.ps1  check_mirror_sync.ps1  install_rqlite_backup_task.ps1  install_rqlite_chaos_task.ps1  install_ssh_for_system.ps1  sync_mirror.ps1
scripts/install/: README.md  _swap-binaries.ps1  install-fabric.ps1  install-host.ps1  install-hub-watchdog.ps1  install-runner-watchdog.ps1  install-suffrage-selfheal.ps1  install_agent_runner_remote_wrapper.ps1  nssm-install-agent-runner.ps1  nssm-install-hub.ps1  nssm-install-rqlite.ps1  nssm-install-runner.ps1  rqlite-suffrage-selfheal.ps1  set-static-ip.ps1  set-static-ip.sh  switch-to-rust-services.ps1  uninstall-fabric.ps1  update-fabric.ps1
scripts/ops/: apply-standby-topology.ps1
tests/: _lint_floor_canary.txt  conftest.py  test_alias_persistence.py  test_beacon_presence_parity.py  test_cli_smoke.py  test_dispatcher_signing.py  test_fixtures.py  test_forgewire_claim_router_parity.py  test_forgewire_runtime_parity.py  test_forgewire_streams_parity.py  test_hub_route_auth_unit.py  test_hub_rqlite_e2e.py  test_installer_assets_in_sync.py  test_loom_env_digest_parity.py  test_loom_runner_parity.py  test_mcp_and_vscode_surface.py  test_no_hardcoded_ips.py  test_parity_variance.py  test_policy_decisions_fixture.py  test_rqlite_db_adapter.py  test_runner_dedupe.py  test_runner_identity_schema.py  test_runner_intent_unit.py  test_runner_observability.py  test_runner_startup_validation.py  test_runtime_parity_validation.py  test_secret_key_provider_unit.py  test_signed_command_canonical_parity.py
tests/cluster/: test_blobs.py  test_blobs_chunked.py  test_inmemory_transport.py
tests/fixtures/: ENDPOINT_AUTH_MATRIX.md  ORACLE.md  generate_fixtures.py  live_healthz_capture.json
tests/hub/: conftest.py  test_approvals.py  test_audit_chain.py  test_capability_routing.py  test_client_return_contracts.py  test_cost_ledger.py  test_exception_chains.py  test_host_summaries.py  test_intent_gate.py  test_lifespan.py  test_policy_gate.py  test_routes_layout.py  test_secret_broker.py  test_task_kind.py
tests/runner/: test_runner_kind_tag.py
vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts  hubClient.ts  treeProviders.ts
(+51 files in other folders)
