# forgewire/Cargo.toml
#
# Rust acceleration core for the ForgeWire control plane.
# Workspace of focused crates plus a single PyO3 binding crate that exposes
# the Python-importable extension.

[workspace]
resolver = "2"
members = [
    "crates/fabric-types",
    "crates/fabric-protocol",
    "crates/fabric-identity",
    "crates/fabric-audit",
    "crates/fabric-store",
    "crates/fabric-store-sqlite",
    "crates/fabric-policy",
    "crates/fabric-hub",
    "crates/fabric-client",
    "crates/fabric-runner",
    "crates/fabric-claim-router",
    "crates/fabric-streams",
    "crates/fabric-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DigitalHallucinations/forgewire-fabric"
authors = ["Jeremy Shows <jeremyshws@gmail.com>"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "fast"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

# Internal crates
fabric-types = { path = "crates/fabric-types" }
fabric-protocol = { path = "crates/fabric-protocol" }
fabric-identity = { path = "crates/fabric-identity" }
fabric-audit = { path = "crates/fabric-audit" }
fabric-store = { path = "crates/fabric-store" }
fabric-store-sqlite = { path = "crates/fabric-store-sqlite" }
fabric-policy = { path = "crates/fabric-policy" }
fabric-hub = { path = "crates/fabric-hub" }
fabric-client = { path = "crates/fabric-client" }
fabric-runner = { path = "crates/fabric-runner" }
fabric-claim-router = { path = "crates/fabric-claim-router" }
fabric-streams = { path = "crates/fabric-streams" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
float_cmp = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
