[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgewire-fabric"
version = "0.13.0"
description = "ForgeWire Fabric — work-graph-aware compute fabric: signed dispatch, scope-bound capability tokens, federated overlay. Apache-2.0."
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Jeremy Shows", email = "jeremyshws@gmail.com" }]
readme = "README.md"
keywords = [
    "distributed",
    "compute",
    "cluster",
    "ai-agents",
    "task-dispatch",
    "control-plane",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "cryptography>=42.0",
    "click>=8.1",
    "sse-starlette>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
mdns = ["zeroconf>=0.131"]
runtime = ["forgewire-runtime>=0.1"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]
all = ["forgewire-fabric[mdns,runtime,test]"]

[project.urls]
Homepage = "https://github.com/DigitalHallucinations/forgewire-fabric"
Repository = "https://github.com/DigitalHallucinations/forgewire-fabric"
Issues = "https://github.com/DigitalHallucinations/forgewire-fabric/issues"

[project.scripts]
forgewire-fabric = "forgewire_fabric.cli:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
include = ["forgewire_fabric*"]

[tool.setuptools.package-data]
forgewire_fabric = [
    "_installer_assets/*.ps1",
    "_installer_assets/systemd/*.service",
    "_installer_assets/launchd/*.plist",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["python/forgewire_fabric/_installer_assets"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "UP"]
ignore = [
    "E501",
    "UP037",
]

