[package]
name = "fabric-beacon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-dependency UDP broadcast hub discovery for ForgeWire Fabric — survives DHCP/subnet changes, no static addresses."

[dependencies]
fabric-protocol = { path = "../fabric-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
fabric-identity = { path = "../fabric-identity" }
fabric-types = { path = "../fabric-types" }
ed25519-dalek = { workspace = true, features = ["std", "fast", "rand_core"] }

[lints]
workspace = true
