[package]
name = "fabric-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native operator CLI for ForgeWire Fabric — setup, health, identity, audit, doctor."

[[bin]]
name = "forgewire-fabric-cli"
path = "src/main.rs"

[dependencies]
fabric-types = { path = "../fabric-types" }
fabric-protocol = { path = "../fabric-protocol" }
fabric-identity = { path = "../fabric-identity" }
fabric-audit = { path = "../fabric-audit" }
fabric-client = { path = "../fabric-client" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
