[package]
name = "fabric-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed HTTP client for the ForgeWire Fabric hub API."

[dependencies]
fabric-types = { path = "../fabric-types" }
fabric-protocol = { path = "../fabric-protocol" }
fabric-identity = { path = "../fabric-identity" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
rand.workspace = true

[lints]
workspace = true
