[package]
name = "fabric-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Durable ed25519 identity management for ForgeWire Fabric nodes."

[dependencies]
fabric-types = { path = "../fabric-types" }
fabric-protocol = { path = "../fabric-protocol" }
serde.workspace = true
serde_json.workspace = true
ed25519-dalek = { workspace = true, features = ["std", "fast", "rand_core"] }
hex.workspace = true
thiserror.workspace = true
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
