# fabric-py — PyO3 bindings exposing fabric-protocol (and later fabric-claim-router, fabric-streams) to Python.

[package]
name = "fabric-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgewire_runtime"
crate-type = ["cdylib"]

[dependencies]
fabric-protocol.workspace = true
fabric-claim-router.workspace = true
fabric-streams.workspace = true
serde_json.workspace = true

pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
pythonize = "0.24"

[lints]
workspace = true
