[package]
name = "fabric-store-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite backend for the ForgeWire Fabric store contract."

[dependencies]
fabric-store = { path = "../fabric-store" }
fabric-types = { path = "../fabric-types" }
fabric-audit = { path = "../fabric-audit" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
