[package]
name = "fabric-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Store trait definitions for ForgeWire Fabric hub persistence."

[dependencies]
fabric-types = { path = "../fabric-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait = "0.1"

[lints]
workspace = true
