[package]
name = "fabric-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared domain types for ForgeWire Fabric — no HTTP or database coupling."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
